[gd_scene load_steps=9 format=3 uid="uid://dtuenxyml2gyt"]

[ext_resource type="Script" path="res://Ground Levels/Scripts/MultiPlanet/rocket.gd" id="1_lrwud"]
[ext_resource type="Texture2D" uid="uid://c5m8hv5b6kesu" path="res://Assets/Sprites/Ships/Alien Ships/spaceShips_008.png" id="2_p35gn"]
[ext_resource type="PackedScene" uid="uid://dtn4rmmyf5m0" path="res://Interaction/Scenes/interactable.tscn" id="3_8ryf4"]
[ext_resource type="Texture2D" uid="uid://1mfvsnjnuuq1" path="res://Assets/Sprites/Ships/Pirate Ships/Effects/fire2.png" id="4_u1vet"]
[ext_resource type="Texture2D" uid="uid://dq612tleyid3k" path="res://Assets/Sprites/Ships/Pirate Ships/Effects/fire1.png" id="5_77xkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fyfh"]
size = Vector2(93, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y30re"]
size = Vector2(261, 132)

[sub_resource type="SpriteFrames" id="SpriteFrames_ecmpo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_u1vet")
}, {
"duration": 1.0,
"texture": ExtResource("5_77xkt")
}],
"loop": true,
"name": &"Takeoff",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Rocket" type="CharacterBody2D" groups=["Rocket"]]
z_index = 1
collision_layer = 16
collision_mask = 5
script = ExtResource("1_lrwud")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_1fyfh")

[node name="FlyTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="LaunchTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_p35gn")
flip_v = true

[node name="interactable" parent="." instance=ExtResource("3_8ryf4")]
interact_name = "[E] to Take Off"
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactable"]
position = Vector2(-3.5, -25)
shape = SubResource("RectangleShape2D_y30re")

[node name="Flames" type="AnimatedSprite2D" parent="."]
position = Vector2(-16, 49)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_ecmpo")
animation = &"idle"

[node name="Flames2" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 49)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_ecmpo")
animation = &"idle"

[node name="Countdown" type="Label" parent="."]
offset_left = -20.0
offset_top = -69.0
offset_right = 20.0
offset_bottom = -46.0
text = "5"
horizontal_alignment = 1
vertical_alignment = 1
